@@ -244,6 +244,16 @@ name|java
 operator|.
 name|util
 operator|.
+name|HashMap
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|List
 import|;
 end_import
@@ -892,22 +902,103 @@ name|entrySet
 argument_list|()
 control|)
 block|{
-name|String
-name|key
-init|=
+name|addMBean
+argument_list|(
+name|req
+argument_list|,
+name|cats
+argument_list|,
+name|requestedKeys
+argument_list|,
 name|entry
 operator|.
 name|getKey
 argument_list|()
-decl_stmt|;
-name|SolrInfoMBean
-name|m
-init|=
+argument_list|,
 name|entry
 operator|.
 name|getValue
 argument_list|()
-decl_stmt|;
+argument_list|)
+expr_stmt|;
+block|}
+for|for
+control|(
+name|SolrInfoMBean
+name|infoMBean
+range|:
+name|req
+operator|.
+name|getCore
+argument_list|()
+operator|.
+name|getCoreDescriptor
+argument_list|()
+operator|.
+name|getCoreContainer
+argument_list|()
+operator|.
+name|getResourceLoader
+argument_list|()
+operator|.
+name|getInfoMBeans
+argument_list|()
+control|)
+block|{
+name|addMBean
+argument_list|(
+name|req
+argument_list|,
+name|cats
+argument_list|,
+name|requestedKeys
+argument_list|,
+name|infoMBean
+operator|.
+name|getName
+argument_list|()
+argument_list|,
+name|infoMBean
+argument_list|)
+expr_stmt|;
+block|}
+return|return
+name|cats
+return|;
+block|}
+DECL|method|addMBean
+specifier|private
+name|void
+name|addMBean
+parameter_list|(
+name|SolrQueryRequest
+name|req
+parameter_list|,
+name|NamedList
+argument_list|<
+name|NamedList
+argument_list|<
+name|NamedList
+argument_list|<
+name|Object
+argument_list|>
+argument_list|>
+argument_list|>
+name|cats
+parameter_list|,
+name|Set
+argument_list|<
+name|String
+argument_list|>
+name|requestedKeys
+parameter_list|,
+name|String
+name|key
+parameter_list|,
+name|SolrInfoMBean
+name|m
+parameter_list|)
+block|{
 if|if
 condition|(
 operator|!
@@ -925,7 +1016,7 @@ name|key
 argument_list|)
 operator|)
 condition|)
-continue|continue;
+return|return;
 name|NamedList
 argument_list|<
 name|NamedList
@@ -954,7 +1045,7 @@ literal|null
 operator|==
 name|catInfo
 condition|)
-continue|continue;
+return|return;
 name|NamedList
 argument_list|<
 name|Object
@@ -1112,10 +1203,6 @@ argument_list|,
 name|mBeanInfo
 argument_list|)
 expr_stmt|;
-block|}
-return|return
-name|cats
-return|;
 block|}
 DECL|method|getDiff
 specifier|protected
