@@ -336,6 +336,64 @@ literal|"requests"
 argument_list|)
 argument_list|)
 expr_stmt|;
+name|xml
+operator|=
+name|h
+operator|.
+name|query
+argument_list|(
+name|req
+argument_list|(
+name|CommonParams
+operator|.
+name|QT
+argument_list|,
+literal|"/admin/mbeans"
+argument_list|,
+literal|"stats"
+argument_list|,
+literal|"true"
+argument_list|,
+literal|"key"
+argument_list|,
+literal|"org.apache.solr.handler.admin.CollectionsHandler"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|NamedList
+argument_list|<
+name|NamedList
+argument_list|<
+name|NamedList
+argument_list|<
+name|Object
+argument_list|>
+argument_list|>
+argument_list|>
+name|nl
+init|=
+name|SolrInfoMBeanHandler
+operator|.
+name|fromXML
+argument_list|(
+name|xml
+argument_list|)
+decl_stmt|;
+name|assertNotNull
+argument_list|(
+name|nl
+operator|.
+name|get
+argument_list|(
+literal|"QUERYHANDLER"
+argument_list|)
+operator|.
+name|get
+argument_list|(
+literal|"org.apache.solr.handler.admin.CollectionsHandler"
+argument_list|)
+argument_list|)
+expr_stmt|;
 block|}
 block|}
 end_class
